# ECM3440-residential-iot1

./: Dockerfile  README.md  codecov.yml  pyproject.toml
.github/workflows/: python-app.yml
scripts/: pip-install-lint.sh
server/: .gitignore
server/iot-hub-trigger/: __init__.py  function.json  handler.py  test_handler.py
soil-moisture-sensor/: app.py  app_class.py  counterfit_circuit_broken.py  test_app.py  test_counterfit_circuit_broken.py
