[tool.poetry]
name = "ECM3440-IOT"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
azure-iot-device = "^2.7.1"
CounterFit = "^0.1.3-alpha.29"
counterfit-connection = "^0.1.0-alpha.5"
counterfit-shims-grove = "^0.1.4-alpha.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
radon = "^5.1.0"
xenon = "0.8.0"
pytest = "^6.2.5"
coverage = "6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
