[tool.poetry]
name = "ecm3440"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
azure-iot-device = "^2.7.1"
counterfit = "^0.1.3-alpha.29"
counterfit-connection = "^0.1.0-alpha.5"
counterfit-shims-grove = "^0.1.4-alpha.5"

[tool.poetry.dev-dependencies]
azure-functions = "^1.7.2"
azure-iot-hub = "^2.6.0"
coverage = "6.1.1"
flake8 = "^3.9.2"
radon = "^5.1.0"
xenon = "0.8.0"
pytest = "^6.2.5"
responses = "^0.14.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
